src/main/java/com/example/restapi/Error/ErrorResponse.java
package com.example.restapi.Error;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class ErrorResponse {
    private int code;
    private String message;
    private String solution;
}
